Updation to .env

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ REFRESH_TOKEN_PRIVATE_KEY=b312047178a9c23d2438c56b8d88b41ab9d07a119a26fffc9ca0a1
 CLOUDINARY_CLOUD_NAME=ds6eichlr
 CLOUDINARY_API_KEY=783137768455277
 CLOUDINARY_API_SECRET=x-D33NXtaah_0LeBdeeyivkjNa8
-CORS_ORIGIN=https://client-7sdzp.ondigitalocean.app/
+CORS_ORIGIN=https://client-7sdzp.ondigitalocean.app
